--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Anyways, I'm making this last gift memorable. I figured that the previous ones are all materials, so why not make something digital. 
   </p>
   <p style="text-align: center;">
-    I want to congratulate you ofcourse, finally we're done with high school. Goodluck on your next journey, may it be college, business, or anyhting
+    I want to congratulate you ofcourse, finally we're done with high school. Goodluck on your next journey, may it be college, business, or anything
     that lays ahead of you. I wish you good luck on your future endeavours, may you find sucess in everything that you do or wish to achieve. 
     I know you would accomplish these things, just like I said, you're talented, smart, hard-working, and many more. Traits that would eventually lead to success. 
   </p>
