--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   </p>
   <h4 style=" text-align: right;">Until then, to my yellow person</h4>
   <h5 style=" text-align: right;">from yours truly, Rein</h5>
+  <img src="image.jpg" alt="Description of Image">
   <script src="script.js"></script>
 </body> 
 </html>
