--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p style="text-align: center;">
     Now for the apologies. I'm sorry for the countless things I have done. Sorry for making you cry, making you feel pressured, for being stubborn and 
     borederline annoying, and many more. I just found out that I sent you messages on random times, trust me up to this point i still feel ashamed when I remember it.
-    I'm sorry I was intoxicated :') so let's just forget about that please. I'm also sorry for the trouble I caused you, you didn't deserve any of that.
+    I'm sorry I was intoxicated :') so let's just forget about that please. I'm also sorry for the trouble I have caused you, you didn't deserve any of that.
   </p>
   <p style="text-align: center;">
     We haven't talked in long time so I don't really know what you have been up to. but I'll address this anyway.
@@ -67,14 +67,14 @@
     But you are the only exception"
   </p>
   <p style=" text-align: center;">
-   Also, like the song with its simple guitar beat, loving you was simple. It was calm, easy, and peaceful. At least om my part.
-   It came natural for me. Thank you for making it easy. if you think otherwise, then I have to disagree with you.
+   Also, like the song with its simple guitar beat, loving you was simple. It was calm, easy, and peaceful. At least on my part.
+   It came natural. Thank you for making it easy. But if you think otherwise, then I'll have to disagree with you.
   </p>
   <p style="text-align: center; font-style: italic; ">Hindi ka mahirap mahalin, mas mahirap na hindi ka mahalin</p>
   <p style=" text-align: center;">I can think a lot of things to tell you, but I guess a proper goodbye would do.</p>
   <h2 style="text-align: center;">Goodbye, Ella</h2>
-  <p style=" text-align: center;">May you find happiness in your life and may you achieve your dreams. Maybe years from now we might cross paths again.
-  When it's all said and done, maybe we could share a cup of coffee or something.
+  <p style=" text-align: center;">May you find happiness in your life and may you achieve your dreams. I'll pray for it to happen. Maybe years from now we might cross paths again.
+  And when it's all said and done, maybe we could share a cup of coffee or something.
   </p>
   <h4 style=" text-align: right;">Until then, to my yellow person</h4>
   <h5 style=" text-align: right;">from yours truly, Rein</h5>
