--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h5 style=" text-align: right;">from yours truly, Rein</h5>
   <img src="img.jpg" alt="Description" align="center">
   <script src="script.js"></script>
-<p style=" text-align: center;">btw I can edit this letter, just want to tell you that you looked very pretty awhile ago :))</p>
+<p style=" text-align: center;">btw I can edit this letter, I want to tell you that you looked very pretty awhile ago :))</p>
   
   
 </body> 
